--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   },
   "dependencies": {
     "@leecheuk/react-google-login": "^5.4.1",
+    "@react-oauth/google": "^0.8.0",
+    "axios": "^1.3.4",
+    "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-button": "^0.7.2",
     "react-router-dom": "^6.8.2",
     "react-webcam": "^7.0.1"
   },
